@@ -1,4 +1,4 @@
-$Id: History,v 1.1 2000-05-23 06:30:16 stesting Exp $
+$Id: History,v 1.2 2000-06-15 09:52:40 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+15th June 2000  John Allison  (test18-V01-01-03)
+- ISO compliance.
 
 23rd May 2000  John Allison  (test18-V01-01-00)
 - First version from hadronic/models/radiative_decay/test/exrdm02.
